--- a/app/src/main/res/layout/fragment_input_makanan.xml
+++ b/app/src/main/res/layout/fragment_input_makanan.xml
@@ -65,39 +65,15 @@
             android:textColor="@color/cardview_light_background" />
 
 
-        <LinearLayout
-            android:id="@+id/l_makanan"
+        <EditText
+            android:id="@+id/etAlat"
+            style="@android:style/Widget.Holo.Light.EditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/btnTambah"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.50"
-                android:background="#00ffffff"
-                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
-                app:srcCompat="@drawable/btntambah" />
-
-            <ImageButton
-                android:id="@+id/btnHapus"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:layout_gravity="center"
-                android:layout_weight="0.50"
-                android:background="#00ffffff"
-                app:srcCompat="@drawable/btnhapus" />
-
-
-        </LinearLayout>
-
+            android:ems="10"
+            android:hint="Tulis alat dan Bahan"
+            android:inputType="textMultiLine"
+            android:textColor="@color/cardview_light_background" />
 
         <TextView
             android:id="@+id/textView4"
@@ -107,42 +83,17 @@
             android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
             android:textColor="@color/cardview_light_background" />
 
-
-        <LinearLayout
-            android:id="@+id/layout_step"
+        <EditText
+            android:id="@+id/etStep"
+            style="@android:style/Widget.Holo.Light.EditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:ems="10"
+            android:hint="Tulis Langkah langkah"
+            android:inputType="textMultiLine"
+            android:textColor="@color/cardview_light_background" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/btnTambah2"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="0.5"
-                    android:background="#00ffffff"
-                    app:srcCompat="@drawable/btnlangkah" />
-
-                <ImageButton
-                    android:id="@+id/btnHapus2"
-                    android:layout_width="match_parent"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="0.5"
-                    android:background="#00ffffff"
-                    app:srcCompat="@drawable/btnhapus" />
-
-            </LinearLayout>
 
             <ImageButton
                 android:id="@+id/button2"
@@ -154,6 +105,4 @@
                 android:background="#00ffffff"
                 app:srcCompat="@drawable/btnsubmit" />
         </LinearLayout>
-
-    </LinearLayout>
 </ScrollView>
