--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -49,7 +49,7 @@
                     android:textSize="25dp" />
 
 
-                <ImageButton
+                <Button
                     android:id="@+id/bLihatMinuman"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
