--- a/app/src/main/res/layout-v11/fragment_daging.xml
+++ b/app/src/main/res/layout-v11/fragment_daging.xml
@@ -6,11 +6,12 @@
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/cardViewSayuran"
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="304dp"
             android:layout_gravity="center"
@@ -27,7 +28,7 @@
 
 
                 <ImageView
-                    android:id="@+id/imageViewSayuran"
+                    android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:layout_marginTop="5dp"
@@ -35,7 +36,7 @@
                     android:src="@drawable/lapis_terigu" />
 
                 <TextView
-                    android:id="@+id/tvJudulSayuran"
+                    android:id="@+id/textViewDeskripsi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/imageView"
@@ -49,7 +50,7 @@
 
 
                 <Button
-                    android:id="@+id/bLihatSayuran"
+                    android:id="@+id/bLihatDaging"
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -65,5 +66,10 @@
 
 
         </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/tvRecomend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
