button Lihat Resep, active

--- a/app/src/main/res/layout/fragment_sayuran.xml
+++ b/app/src/main/res/layout/fragment_sayuran.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/tvJudulSayuran"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView"
+                    android:layout_below="@+id/imageViewSayuran"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:padding="16dp"
