--- a/app/src/main/res/layout/fragment_minuman.xml
+++ b/app/src/main/res/layout/fragment_minuman.xml
@@ -39,7 +39,7 @@
                     android:id="@+id/tvJudulMinuman"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/imageView"
+                    android:layout_below="@+id/imageViewMinuman"
                     android:ellipsize="end"
                     android:maxLines="1"
                     android:padding="16dp"
